# mojo_flare

./: .gitignore  README.md  pixi.toml  recipe.yaml
benchmark/: bench_compare.mojo  bench_http.mojo  bench_parse.mojo  bench_server.mojo  bench_tcp.mojo  bench_ws_mask.mojo
benchmark/baselines/quiche/: Cargo.toml  README.md  VERSION  check.sh  run.sh
benchmark/baselines/quiche/src/: main.rs
benchmark/baselines/quinn/: Cargo.toml  README.md  VERSION  check.sh  run.sh
benchmark/baselines/quinn/src/: main.rs
conformance/: README.md  fixture-format.md
conformance/h1/: rfc9112_empty_request_reject.json  rfc9112_get_simple_accept.json  rfc9112_lf_only_line_endings_lenient_accept.json  rfc9112_lf_only_line_endings_reject.json  rfc9112_mixed_case_method_reject.json  rfc9112_obs_fold_reject.json  rfc9112_ows_before_colon_reject.json  rfc9112_post_with_content_length_accept.json
docs/: architecture.md  benchmark.md  cookbook.md  features.md  security.md  threat-model.md
examples/: 04_tcp_echo.mojo  07_ergonomics.mojo
examples/advanced/: http2_client.mojo  http3_server.mojo  ws_over_h2.mojo  ws_permessage_deflate.mojo
flare/: __init__.mojo  prelude.mojo
flare/crypto/: __init__.mojo
flare/dns/: resolver.mojo
flare/grpc/: framing.mojo  metadata.mojo  status.mojo
flare/h3/: response_writer.mojo  server.mojo
flare/http/: __init__.mojo  _server_reactor_impl.mojo  _unified_reactor_impl.mojo  client.mojo  cookie.mojo  encoding.mojo  error.mojo  extract.mojo  handler.mojo  headers.mojo  reliability.mojo  response.mojo  server.mojo  template.mojo  url.mojo
flare/http2/: client.mojo  server.mojo
flare/net/: _libc.mojo  address.mojo  socket.mojo
flare/openapi/: __init__.mojo  spec.mojo
flare/prelude/: __init__.mojo
flare/qpack/: codec.mojo
flare/quic/: __init__.mojo  crypto.mojo  protection.mojo  server.mojo
flare/runtime/: __init__.mojo  _thread.mojo  io_uring_driver.mojo  scheduler.mojo  uring_reactor.mojo
flare/tcp/: listener.mojo  stream.mojo
flare/testing/: fork_server.mojo
flare/tls/: _server_ffi.mojo  config.mojo  stream.mojo
flare/tls/ffi/rustls_wrapper/: Cargo.toml
flare/tls/ffi/rustls_wrapper/src/: lib.rs
flare/udp/: socket.mojo
flare/utils/: __init__.mojo  posix_proc.mojo
flare/ws/: __init__.mojo  client.mojo  client_h2.mojo  extensions.mojo  frame.mojo  permessage_deflate.mojo  server.mojo
fuzz/: fuzz_cookie.mojo  fuzz_h3_frame.mojo  fuzz_quic_packet_decrypt.mojo  fuzz_quic_varint.mojo  fuzz_ws_deflate.mojo  prop_headers.mojo
scripts/: bench_server.sh
tests/: test_dns.mojo  test_ergonomics.mojo  test_fork_server.mojo  test_h2_conn_handle.mojo  test_h2_per_stream_cancel.mojo  test_h2_server_handler.mojo  test_http.mojo  test_multi_listener.mojo  test_net.mojo  test_static_multicore.mojo  test_tcp.mojo  test_tls.mojo  test_tls_resume.mojo  test_udp.mojo  test_unified_http_client.mojo  test_unified_http_server.mojo  test_uring_serve_handler.mojo  test_uring_serve_handler_load.mojo  test_uring_serve_static.mojo  test_ws.mojo  test_ws_h2.mojo  test_ws_multicore.mojo  test_ws_permessage_deflate.mojo
tools/: check_reactor_size.sh  check_sans_io.sh  run_sanitizer_tests.sh
(+89 files in other folders)
